Add Hitnet functionality to geometry library. Format code.

--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -65,7 +65,9 @@
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
     "chunk: Metashape.Chunk = document.chunks[0]\n",
-    "valid_cameras: list[Metashape.Camera] = [camera for camera in chunk.cameras if camera.transform]\n",
+    "valid_cameras: list[Metashape.Camera] = [\n",
+    "    camera for camera in chunk.cameras if camera.transform\n",
+    "]\n",
     "\n",
     "camera: Metashape.Camera = valid_cameras[0]\n",
     "\n",
@@ -74,8 +76,12 @@
     "logger.info(camera.sensor)\n",
     "logger.info(chunk.model)\n",
     "\n",
-    "range_map: Metashape.Image = camera.chunk.model.renderDepth(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
-    "normal_map: Metashape.Image = camera.chunk.model.renderNormalMap(camera.transform, camera.sensor.calibration, add_alpha=False)\n",
+    "range_map: Metashape.Image = camera.chunk.model.renderDepth(\n",
+    "    camera.transform, camera.sensor.calibration, add_alpha=False\n",
+    ")\n",
+    "normal_map: Metashape.Image = camera.chunk.model.renderNormalMap(\n",
+    "    camera.transform, camera.sensor.calibration, add_alpha=False\n",
+    ")\n",
     "\n",
     "for image in [range_map, normal_map]:\n",
     "    logger.info(f\"Channels:      {image.channels}\")\n",
