--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -66,22 +66,27 @@
     "    compute_camera_calibration,\n",
     ")\n",
     "\n",
-    "def export_rendered_range(chunk: Metashape.Chunk, range_directory: Path, normal_directory: Path) -> None:\n",
+    "\n",
+    "def export_rendered_range(\n",
+    "    chunk: Metashape.Chunk, range_directory: Path, normal_directory: Path\n",
+    ") -> None:\n",
     "    \"\"\"Export range maps rendered from a Metashape mesh.\"\"\"\n",
-    "    \n",
-    "    valid_cameras: list[Metashape.Camera] = [camera for camera in chunk.cameras if camera.transform]\n",
+    "\n",
+    "    valid_cameras: list[Metashape.Camera] = [\n",
+    "        camera for camera in chunk.cameras if camera.transform\n",
+    "    ]\n",
     "\n",
     "    logger.info(f\"Range directory: {range_directory}\")\n",
     "    logger.info(f\"Normal directory: {normal_directory}\")\n",
-    "    \n",
+    "\n",
     "    for camera in tqdm(valid_cameras, desc=\"Exporting rendered range maps...\"):\n",
-    "        \n",
+    "\n",
     "        geometry: tuple[Image, Image] = render_range_and_normal_maps(camera)\n",
     "        range_map, normal_map = geometry\n",
-    "        \n",
+    "\n",
     "        range_map.data: np.ndarray = range_map.data.astype(np.float16)\n",
     "        normal_map.data: np.ndarray = normal_map.data.astype(np.float16)\n",
-    "        \n",
+    "\n",
     "        io.write_image(range_directory / f\"{camera.label}.tiff\", range_map.to_array())\n",
     "        io.write_image(normal_directory / f\"{camera.label}.tiff\", normal_map.to_array())"
    ]
@@ -105,21 +110,23 @@
     "\n",
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
-    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
+    "target_chunks: list[Metashape.Chunk] = [\n",
+    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
+    "]\n",
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01\")\n",
     "\n",
     "# Export rendered depth\n",
     "for chunk in target_chunks:\n",
-    "    \n",
+    "\n",
     "    directories: dict[str, Path] = {\n",
     "        \"range_maps\": output_root / Path(\"rendered_range_maps\") / f\"{chunk.label}\",\n",
     "        \"normal_maps\": output_root / Path(\"rendered_normal_maps\") / f\"{chunk.label}\",\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    export_rendered_range(\n",
-    "        chunk, \n",
+    "        chunk,\n",
     "        range_directory=directories.get(\"range_maps\"),\n",
     "        normal_directory=directories.get(\"normal_maps\"),\n",
     "    )"
