--- a/notebooks/stereo_disparity_filter.ipynb
+++ b/notebooks/stereo_disparity_filter.ipynb
@@ -64,14 +64,15 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def sgbm_default_parameters() -> dict:\n",
     "    \"\"\"\n",
     "    Returns default parameters for semi-global block matching.\n",
     "    Adopted from: https://github.com/eborboihuc/stereo-matching/blob/master/sgbm.py\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    min_disparity: int = 0\n",
-    "    num_disparities: int = 6 * 16 # NOTE: 112\n",
+    "    num_disparities: int = 6 * 16  # NOTE: 112\n",
     "    block_size: int = 5\n",
     "    window_size: int = 3\n",
     "    disp12_max_diff: int = 1\n",
@@ -80,9 +81,9 @@
     "    speckle_range: int = 1\n",
     "    pre_filter_cap: int = 63\n",
     "    mode: object = cv2.STEREO_SGBM_MODE_SGBM_3WAY\n",
-    "    \n",
-    "    p1: int = 8 * 1 * block_size**2 # **2 # Smoothness\n",
-    "    p2: int = 32 * 1 * block_size**2 # **2 # Smoothness\n",
+    "\n",
+    "    p1: int = 8 * 1 * block_size**2  # **2 # Smoothness\n",
+    "    p2: int = 32 * 1 * block_size**2  # **2 # Smoothness\n",
     "\n",
     "    return {\n",
     "        \"minDisparity\": min_disparity,\n",
@@ -95,39 +96,40 @@
     "        \"speckleWindowSize\": speckle_window_size,\n",
     "        \"speckleRange\": speckle_range,\n",
     "        \"preFilterCap\": pre_filter_cap,\n",
-    "        \"mode\": mode\n",
+    "        \"mode\": mode,\n",
     "    }\n",
     "\n",
+    "\n",
     "def filter_disparity(\n",
-    "    estimator: object, \n",
-    "    image_left: np.ndarray, \n",
-    "    disparity_left: np.ndarray, \n",
-    "    disparity_right: np.ndarray\n",
+    "    estimator: object,\n",
+    "    image_left: np.ndarray,\n",
+    "    disparity_left: np.ndarray,\n",
+    "    disparity_right: np.ndarray,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"Filter disparity map based on WLS. Returns the disparity map as 16-bit pixels.\"\"\"\n",
-    "    \n",
+    "\n",
     "    filtered_disparity_left = estimator.filter(\n",
-    "        disparity_left, \n",
-    "        image_left, \n",
-    "        None, \n",
+    "        disparity_left,\n",
+    "        image_left,\n",
+    "        None,\n",
     "        disparity_right,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    return filtered_disparity_left\n",
-    "    \n",
+    "\n",
     "\n",
     "def compute_disparity_sgbm(\n",
-    "    image_left: np.ndarray, \n",
-    "    image_right: np.ndarray, \n",
-    "    parameters: dict=sgbm_default_parameters(),\n",
-    "    smooth: bool=False\n",
+    "    image_left: np.ndarray,\n",
+    "    image_right: np.ndarray,\n",
+    "    parameters: dict = sgbm_default_parameters(),\n",
+    "    smooth: bool = False,\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
     "    \"\"\"Computes the disparity for an image pair using OpenCVs SGBM algorithm.\"\"\"\n",
-    "    \n",
+    "\n",
     "    left_matcher = cv2.StereoSGBM_create(**parameters)\n",
     "    right_matcher = cv2.ximgproc.createRightMatcher(left_matcher)\n",
     "\n",
-    "    # Disparity is represented with 16-bit integers. To convert to pixel value cast to float \n",
+    "    # Disparity is represented with 16-bit integers. To convert to pixel value cast to float\n",
     "    # and divide by 16, i.e.:  disparity.astype(np.float32) / 16.0\n",
     "    disparity_left: np.ndarray = left_matcher.compute(image_left, image_right)\n",
     "    disparity_right: np.ndarray = right_matcher.compute(image_right, image_left)\n",
@@ -137,15 +139,21 @@
     "\n",
     "    if smooth:\n",
     "        # FILTER Parameters\n",
-    "        lmbda: int = 100 # regularization parameter 500\n",
+    "        lmbda: int = 100  # regularization parameter 500\n",
     "        sigma: float = 0.2\n",
-    "    \n",
-    "        disparity_filter = cv2.ximgproc.createDisparityWLSFilter(matcher_left=left_matcher)\n",
+    "\n",
+    "        disparity_filter = cv2.ximgproc.createDisparityWLSFilter(\n",
+    "            matcher_left=left_matcher\n",
+    "        )\n",
     "        disparity_filter.setLambda(lmbda)\n",
     "        disparity_filter.setSigmaColor(sigma)\n",
-    "    \n",
-    "        disparity_left: np.ndarray = filter_disparity(disparity_filter, image_left, disparity_left, disparity_right)\n",
-    "        disparity_right: np.ndarray = filter_disparity(disparity_filter, image_right, disparity_right, disparity_left)\n",
+    "\n",
+    "        disparity_left: np.ndarray = filter_disparity(\n",
+    "            disparity_filter, image_left, disparity_left, disparity_right\n",
+    "        )\n",
+    "        disparity_right: np.ndarray = filter_disparity(\n",
+    "            disparity_filter, image_right, disparity_right, disparity_left\n",
+    "        )\n",
     "\n",
     "    assert disparity_left.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
     "    assert disparity_right.dtype == np.float32, \"invalid disparity type: expected int16\"\n",
@@ -153,12 +161,14 @@
     "    return disparity_left, disparity_right\n",
     "\n",
     "\n",
-    "def disparity_to_range(disparity_map: np.ndarray, focal_length: float, baseline: float) -> np.ndarray:\n",
+    "def disparity_to_range(\n",
+    "    disparity_map: np.ndarray, focal_length: float, baseline: float\n",
+    ") -> np.ndarray:\n",
     "    \"\"\"Converts disparity to range.\"\"\"\n",
     "    INVALID_RANGE: float = 0.0\n",
-    "    \n",
+    "\n",
     "    inverse_disparity: np.ndarray = 1.0 / disparity_map\n",
-    "    \n",
+    "\n",
     "    range_map: np.ndarray = inverse_disparity * focal_length * baseline\n",
     "    range_map: np.ndarray = np.where(range_map < 0.0, INVALID_RANGE, range_map)\n",
     "\n",
@@ -184,11 +194,11 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import tqdm\n",
-    "    \n",
+    "\n",
     "\n",
     "from benthoscan.backends.metashape.data_types import (\n",
     "    ImagePair,\n",
-    "    SensorPair, \n",
+    "    SensorPair,\n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
     ")\n",
@@ -200,8 +210,8 @@
     ")\n",
     "\n",
     "from benthoscan.backends.metashape.image import (\n",
-    "    ImagePairLoader, \n",
-    "    image_to_numpy, \n",
+    "    ImagePairLoader,\n",
+    "    image_to_numpy,\n",
     "    generate_image_loaders,\n",
     ")\n",
     "\n",
@@ -213,7 +223,9 @@
     ")\n",
     "\n",
     "\n",
-    "def generate_stereo_rectification(chunk: Metashape.Chunk) -> tuple[RectificationResult, list[ImagePairLoader]]:\n",
+    "def generate_stereo_rectification(\n",
+    "    chunk: Metashape.Chunk,\n",
+    ") -> tuple[RectificationResult, list[ImagePairLoader]]:\n",
     "    \"\"\"Export range maps based on a stereo camera setup.\"\"\"\n",
     "\n",
     "    # Get pairs of sensors and cameras (master-slaves)\n",
@@ -227,7 +239,7 @@
     "\n",
     "    # Compute homographies, image transformations and camera matrices for stereo rectification\n",
     "    rectification: RectificationResult = compute_stereo_rectification(calibration)\n",
-    "    \n",
+    "\n",
     "    # Set up image loaders for all camera pairs\n",
     "    image_loaders: list[ImagePairLoader] = generate_image_loaders(group.camera_pairs)\n",
     "\n",
@@ -260,40 +272,44 @@
     "\n",
     "class WindowHandle(NamedTuple):\n",
     "    \"\"\"Class representing a window handle.\"\"\"\n",
-    "    \n",
+    "\n",
     "    name: str\n",
     "    width: int\n",
     "    height: int\n",
     "\n",
     "\n",
-    "def on_parameter_change(value, name: str=\"\") -> None:\n",
+    "def on_parameter_change(value, name: str = \"\") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "    logger.info(f\"{name}: {value}\")\n",
     "\n",
     "\n",
-    "def initialize_stereo_tuner(window_name: str=\"Window\", width: int=800, height: int=1200) -> WindowHandle:\n",
+    "def initialize_stereo_tuner(\n",
+    "    window_name: str = \"Window\", width: int = 800, height: int = 1200\n",
+    ") -> WindowHandle:\n",
     "    \"\"\"TODO\"\"\"\n",
-    "    \n",
+    "\n",
     "    cv2.namedWindow(window_name, cv2.WINDOW_NORMAL)\n",
     "    cv2.resizeWindow(window_name, width, height)\n",
     "\n",
     "    track_bars: list[tuple] = [\n",
-    "        ( \"minDisparity\", 0, 200 ),\n",
-    "        ( \"numDisparities\", 1, 50 ),\n",
-    "        ( \"blockSize\", 5, 50 ),\n",
-    "        ( \"preFilterType\", 1, 1 ),\n",
-    "        ( \"preFilterSize\", 2, 25 ),\n",
-    "        ( \"preFilterCap\", 5, 62 ), \n",
-    "        ( \"textureThreshold\", 10, 100 ), \n",
-    "        ( \"uniquenessRatio\", 15, 100 ), \n",
-    "        ( \"speckleRange\", 0, 100 ), \n",
-    "        ( \"speckleWindowSize\", 3, 25 ), \n",
-    "        ( \"disp12MaxDiff\", 0, 100 ), \n",
+    "        (\"minDisparity\", 0, 200),\n",
+    "        (\"numDisparities\", 1, 50),\n",
+    "        (\"blockSize\", 5, 50),\n",
+    "        (\"preFilterType\", 1, 1),\n",
+    "        (\"preFilterSize\", 2, 25),\n",
+    "        (\"preFilterCap\", 5, 62),\n",
+    "        (\"textureThreshold\", 10, 100),\n",
+    "        (\"uniquenessRatio\", 15, 100),\n",
+    "        (\"speckleRange\", 0, 100),\n",
+    "        (\"speckleWindowSize\", 3, 25),\n",
+    "        (\"disp12MaxDiff\", 0, 100),\n",
     "    ]\n",
     "\n",
     "    for name, lower, upper in track_bars:\n",
-    "        cv2.createTrackbar(name, window_name, lower, upper, partial(on_parameter_change, name=name))\n",
-    "    \n",
+    "        cv2.createTrackbar(\n",
+    "            name, window_name, lower, upper, partial(on_parameter_change, name=name)\n",
+    "        )\n",
+    "\n",
     "    return WindowHandle(name=window_name, width=width, height=height)\n",
     "\n",
     "\n",
@@ -319,24 +335,30 @@
     "\n",
     "\n",
     "def disparity_worker(\n",
-    "    image_pair: ImagePair, \n",
-    "    rectification: RectificationResult, \n",
+    "    image_pair: ImagePair,\n",
+    "    rectification: RectificationResult,\n",
     "    parameters: dict,\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
     "    \"\"\"TODO\"\"\"\n",
     "    rectified_images: tuple = rectify_image_pair(\n",
-    "        image_pair.master.image, \n",
-    "        image_pair.slave.image, \n",
+    "        image_pair.master.image,\n",
+    "        image_pair.slave.image,\n",
     "        rectification,\n",
     "    )\n",
-    "    disparity_maps: tuple = compute_disparity_sgbm(rectified_images[0], rectified_images[1], parameters)\n",
+    "    disparity_maps: tuple = compute_disparity_sgbm(\n",
+    "        rectified_images[0], rectified_images[1], parameters\n",
+    "    )\n",
     "    return disparity_maps\n",
     "\n",
     "\n",
-    "def visualize_stereo_results(rectification: RectificationResult, image_loaders: list[ImagePairLoader]) -> None:\n",
+    "def visualize_stereo_results(\n",
+    "    rectification: RectificationResult, image_loaders: list[ImagePairLoader]\n",
+    ") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
-    "    \n",
-    "    handle: WindowHandle = initialize_stereo_tuner(window_name=\"test_window\", width=1600, height=900)\n",
+    "\n",
+    "    handle: WindowHandle = initialize_stereo_tuner(\n",
+    "        window_name=\"test_window\", width=1600, height=900\n",
+    "    )\n",
     "\n",
     "    focal_length: float = rectification.master.calibration.focal_length\n",
     "    baseline: float = np.linalg.norm(rectification.slave.location)\n",
@@ -345,10 +367,10 @@
     "    load_image: bool = True\n",
     "\n",
     "    # TODO: Initialize disparity estimator\n",
-    "    # \n",
+    "    #\n",
     "\n",
     "    image_pair = None\n",
-    "    \n",
+    "\n",
     "    # While the window has not been closed\n",
     "    while True:\n",
     "\n",
@@ -356,33 +378,41 @@
     "            loader: ImagePairLoader = image_loaders[load_index]\n",
     "            image_pair: ImagePair = loader()\n",
     "            load_action: bool = False\n",
-    "        \n",
+    "\n",
     "        parameters: dict = get_tuner_parameters(handle)\n",
     "\n",
     "        if image_pair:\n",
-    "            disparity_maps: tuple = disparity_worker(image_pair, rectification, parameters)\n",
+    "            disparity_maps: tuple = disparity_worker(\n",
+    "                image_pair, rectification, parameters\n",
+    "            )\n",
     "\n",
     "            range_maps: tuple = (\n",
-    "                disparity_to_range(disparity_maps[0], focal_length=focal_length, baseline=baseline),\n",
-    "                disparity_to_range(-disparity_maps[1], focal_length=focal_length, baseline=baseline),\n",
+    "                disparity_to_range(\n",
+    "                    disparity_maps[0], focal_length=focal_length, baseline=baseline\n",
+    "                ),\n",
+    "                disparity_to_range(\n",
+    "                    -disparity_maps[1], focal_length=focal_length, baseline=baseline\n",
+    "                ),\n",
     "            )\n",
     "\n",
     "            logger.info(range_maps[1])\n",
     "\n",
     "            MAX_RANGE, MIN_RANGE = 3.0, 0.0\n",
     "            scaled: tuple = (\n",
-    "                np.uint8( 255 * (range_maps[0] - MIN_RANGE) / (MAX_RANGE - MIN_RANGE)),\n",
-    "                np.uint8( 255 * (-1.0 * range_maps[1] - MIN_RANGE) / (MAX_RANGE - MIN_RANGE)),\n",
+    "                np.uint8(255 * (range_maps[0] - MIN_RANGE) / (MAX_RANGE - MIN_RANGE)),\n",
+    "                np.uint8(\n",
+    "                    255 * (-1.0 * range_maps[1] - MIN_RANGE) / (MAX_RANGE - MIN_RANGE)\n",
+    "                ),\n",
     "            )\n",
     "\n",
-    "            merged: np.ndarray = np.hstack(( scaled[0], scaled[1] ))\n",
-    "            \n",
-    "            colored: np.ndarray = cv2.applyColorMap(merged, cv2.COLORMAP_AUTUMN);\n",
-    "            \n",
+    "            merged: np.ndarray = np.hstack((scaled[0], scaled[1]))\n",
+    "\n",
+    "            colored: np.ndarray = cv2.applyColorMap(merged, cv2.COLORMAP_AUTUMN)\n",
+    "\n",
     "            cv2.imshow(handle.name, colored)\n",
-    "        \n",
+    "\n",
     "        key: int = cv2.waitKey(100)\n",
-    "    \n",
+    "\n",
     "        match key:\n",
     "            # Close window using esc key\n",
     "            case 27:\n",
@@ -404,18 +434,19 @@
    "source": [
     "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
     "\n",
-    "target_labels: list[str] = [ \"r23685bc_20100605_021022\" ]\n",
-    "target_chunks: list[Metashape.Chunk] = [chunk for chunk in document.chunks if chunk.label in target_labels]\n",
+    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
+    "target_chunks: list[Metashape.Chunk] = [\n",
+    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
+    "]\n",
     "\n",
     "output_root: Path = Path(\"/data/kingston_snv_01/stereo_range_maps\")\n",
     "\n",
-    "logger.info(ord('\\n'))\n",
+    "logger.info(ord(\"\\n\"))\n",
     "\n",
     "# Generate range maps based on stereo pairs\n",
     "for chunk in target_chunks:\n",
     "    output_directory: Path = output_root / Path(f\"{chunk.label}_range_maps\")\n",
     "\n",
-    "    \n",
     "    rectification, image_loaders = generate_stereo_rectification(chunk)\n",
     "\n",
     "    visualize_stereo_results(rectification, image_loaders)"
